Fixed rendering flicker for editmode

--- a/app/styles/tasklist/_edit-task.scss
+++ b/app/styles/tasklist/_edit-task.scss
@@ -88,7 +88,7 @@ $mat-sha-three: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 		transition: .2s ease-in-out;
 	} 
 }
-.task-card.open{
+.task-card.animateIn{
 	-webkit-animation: task-full-ani .3s forwards ease-in-out;
 	animation: task-full-ani .3s forwards ease-in-out;
 	.input-title.content-editable,
